/*
 * $Id: ChangeLog,v 1.63 2002/01/31 00:09:57 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-01-30 18:20 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    + Added missing hb_itemClear() in hb_vmOperatorCall()
    * Changed hb_itemForwardValue() to hb_itemCopy() in hb_vmFunction().
      /* This fixes brush problem in FWH */

2002-01-30 15:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  + tests/rp_dot.ch
    + Added missing file.

  * source/compiler/harbour.sly
    * Optimized MACROTEXT

    /* xHarbour now support complex macros referencing declared symbols, where Clipper produces an error:

          LOCAL cMacro  := "mVar"

          PRIVATE mVar1 := "I'm mVar"

          ? &cMacro.1

       Complex macros will now work faster, due to compile time optimization.

     */

2002-01-30 11:00 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
  * include/hbexprc.c
    * Corrected 4 instances of hb_compGenPushString() to include the terminating byte.

2002-01-29 08:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbpcode.h
  * source/compiler/genc.c
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
  * source/vm/hvm.c
  * source/vm/macro.c
    * Added support for HB_P_MPUSHSTR

2002-01-29 07:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    + Added missing declaration of hb_strUpperCopy()
  * source/rdd/dbcmd.c
  * source/rdd/workarea.c
    * Minor formatting, and corrected usage of string conversion.
  * source/vm/hvm.c
  * source/vm/memvars.c
    * Minor formatting, and corrected usage of string conversion.
  * tests/pp.prg
    + Added ifndef __XHARBOUR__ guard for Tracelog() definition.

2002-01-29 00:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * make_b32.bat
  * make_vc.bat
    + Added auto creation of production folders.

  * include/hbexprb.c