@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.63 2002/01/31 00:09:57 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.64 2002/01/31 02:20:27 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-01-30 18:20 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * include/hbapi.h
+    + Added missing #include "hbstack.h" within #ifdef HB_API_MACROS
+    * Corrcted definition of hb_pcount() within #ifdef HB_API_MACROS
 
 2002-01-30 18:20 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/hvm.c
